syntax = "proto3";

package notification;

option go_package = "github.com/werbot/werbot/internal/core/notification/proto/notification";

service NotificationHandlers {
  rpc SendMail(SendMail.Request) returns (SendMail.Response) {}
}

enum MailTemplate {
  unspecified = 0;
  password_reset = 1;
  project_invite = 2;
  account_deletion_confirmation = 3;
  account_deletion_info = 4;
}

// rpc SendMail
message SendMail {
  message Request {
    string email = 1;
    string subject = 2;
    MailTemplate template = 3;
    map<string, string> data = 4;
  }

  message Response {}
}
// -----------------------------------------------------
