syntax = "proto3";

package member;

import "google/protobuf/timestamp.proto";
import "internal/grpc/user/proto/user.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/werbot/werbot/internal/grpc/member/proto";

service MemberHandlers {
  // Project section
  rpc ListProjectMembers(ListProjectMembers.Request) returns (ListProjectMembers.Response) {}
  rpc ProjectMember(ProjectMember.Request) returns (ProjectMember.Response) {}
  rpc AddProjectMember(AddProjectMember.Request) returns (AddProjectMember.Response) {}
  rpc UpdateProjectMember(UpdateProjectMember.Request) returns (UpdateProjectMember.Response) {}
  rpc DeleteProjectMember(DeleteProjectMember.Request) returns (DeleteProjectMember.Response) {}

  // Used in finding and adding a new member to the project
  rpc UsersWithoutProject(UsersWithoutProject.Request) returns (UsersWithoutProject.Response) {}

  // Invite section
  rpc ListMembersInvite(ListMembersInvite.Request) returns (ListMembersInvite.Response) {}
  rpc AddMemberInvite(AddMemberInvite.Request) returns (AddMemberInvite.Response) {}
  rpc DeleteMemberInvite(DeleteMemberInvite.Request) returns (DeleteMemberInvite.Response) {}
  rpc MemberInviteActivate(MemberInviteActivate.Request) returns (MemberInviteActivate.Response) {}

  // Server section
  rpc ListServerMembers(ListServerMembers.Request) returns (ListServerMembers.Response) {}
  rpc ServerMember(ServerMember.Request) returns (ServerMember.Response) {}
  rpc AddServerMember(AddServerMember.Request) returns (AddServerMember.Response) {}
  rpc UpdateServerMember(UpdateServerMember.Request) returns (UpdateServerMember.Response) {}
  rpc DeleteServerMember(DeleteServerMember.Request) returns (DeleteServerMember.Response) {}

  // Used in finding and adding a new member to the server
  rpc MembersWithoutServer(MembersWithoutServer.Request) returns (MembersWithoutServer.Response) {}
}

// rpc ListProjectMembers
message ListProjectMembers {
  message Request {
    string owner_id = 1;
    string project_id =2;
    int32 limit = 3;
    int32 offset = 4;
    string sort_by = 5;
  }

  message Response {
    int32 total = 1;
    repeated ProjectMember.Response members = 2;
  }
}
// -----------------------------------------------------

// rpc ProjectMember
message ProjectMember {
  message Request {
    string owner_id = 1 [(buf.validate.field).string.uuid = true]; // @gotags: query:"owner_id"
    string project_id = 2 [(buf.validate.field).string.uuid = true]; // @gotags: query:"project_id"
    string member_id = 3 [
      (buf.validate.field).string.uuid = true,
      (buf.validate.field).ignore_empty = true
    ];
  }

  message Response {
    string owner_id = 1;
    string owner_name = 2;
    string project_id = 3;
    string project_name = 4;
    string member_id = 5;
    string user_id = 6;
    string user_name = 7;
    user.Role role = 8;
    bool active = 9;
    bool online = 10;
    int32 servers_count = 11;
    google.protobuf.Timestamp locked_at = 12;
    google.protobuf.Timestamp archived_at = 13;
    google.protobuf.Timestamp updated_at = 14;
    google.protobuf.Timestamp created_at = 15;
  }
}
// -----------------------------------------------------

// rpc AddProjectMember
message AddProjectMember {
  message Request {
    string owner_id = 1 [(buf.validate.field).string.uuid = true]; // @gotags: query:"owner_id"
    string project_id = 2 [(buf.validate.field).string.uuid = true]; // @gotags: query:"project_id"
    string user_id = 3 [(buf.validate.field).string.uuid = true]; // @gotags: query:"user_id"
    user.Role role = 4;
    bool active = 5;
  }

  message Response {
    string member_id = 1;
  }
}
// -----------------------------------------------------

// rpc UpdateProjectMember
message UpdateProjectMember {
  message Request {
    string owner_id = 1 [(buf.validate.field).string.uuid = true]; // @gotags: query:"owner_id"
    string project_id = 2 [(buf.validate.field).string.uuid = true]; // @gotags: query:"project_id"
    string member_id = 3 [(buf.validate.field).string.uuid = true]; // @gotags: query:"member_id"
    oneof setting {
      user.Role role = 4;
      bool active = 5;
    }
  }

  message Response {}
}
// -----------------------------------------------------

// rpc DeleteProjectMember
message DeleteProjectMember {
  message Request {
    string owner_id = 1 [(buf.validate.field).string.uuid = true]; // @gotags: query:"owner_id"
    string project_id = 2 [(buf.validate.field).string.uuid = true]; // @gotags: query:"project_id"
    string member_id = 3 [(buf.validate.field).string.uuid = true]; // @gotags: query:"member_id"
  }

  message Response {}
}
// -----------------------------------------------------

// rpc UsersWithoutProject
message UsersWithoutProject {
  message Request {
    string owner_id = 1 [(buf.validate.field).string.uuid = true]; // @gotags: query:"owner_id"
    string project_id = 2 [(buf.validate.field).string.uuid = true]; // @gotags: query:"project_id"
    string login = 3;
  }

  message Response {
    repeated User users = 1;
  }

  message User {
    int32 user_id = 1;
    string login = 2;
    string email = 3;
  }
}
// -----------------------------------------------------

// rpc ListMembersInvite
message ListMembersInvite {
  message Request {
    int32 limit = 1;
    int32 offset = 2;
    string sort_by = 3;
    string owner_id = 4 [(buf.validate.field).string.uuid = true]; // @gotags: query:"owner_id"
    string project_id = 5 [(buf.validate.field).string.uuid = true]; // @gotags: query:"project_id"
  }

  message Response {
    int32 total = 1;
    repeated ListMembersInvite.Invites invites = 2;
  }

  message Invites {
    string id = 1;
    string name = 2;
    string surname = 3;
    string email = 4;
    string status = 6;
    google.protobuf.Timestamp updated_at = 7;
    google.protobuf.Timestamp created_at = 8;
  }
}
// -----------------------------------------------------

// rpc AddMemberInvite
message AddMemberInvite {
  message Request {
    string owner_id = 1 [(buf.validate.field).string.uuid = true]; // @gotags: query:"owner_id"
    string project_id = 2 [(buf.validate.field).string.uuid = true]; // @gotags: query:"project_id"
    string user_name = 3 [(buf.validate.field).cel = {
      id: "valid_user_name",
      message: "required field (3 to 30 characters)",
      expression: "this.matches('^[a-z0-9]{3,20}$')"
    }]; // @gotags: query:"user_name"
    string user_surname = 4 [(buf.validate.field).cel = {
      id: "valid_user_surname",
      message: "required field (3 to 30 characters)",
      expression: "this.matches('^[a-z0-9]{3,20}$')"
    }]; // @gotags: query:"user_surname"
    string email = 5 [(buf.validate.field).cel = {
      id: "valid_email",
      message: "must be a valid email",
      expression: "this.isEmail()"
    }]; // @gotags: query:"email"
  }

  message Response {
    string invite = 1;
    string status = 2;
  }
}
// -----------------------------------------------------

// rpc DeleteMemberInvite
message DeleteMemberInvite {
  message Request {
    string owner_id = 1 [(buf.validate.field).string.uuid = true]; // @gotags: query:"owner_id"
    string project_id = 2 [(buf.validate.field).string.uuid = true]; // @gotags: query:"project_id"
    string invite_id = 3 [(buf.validate.field).string.uuid = true]; // @gotags: query:"invite_id"
  }

  message Response {}
}
// -----------------------------------------------------

// rpc MemberInviteActivate
message MemberInviteActivate {
  message Request {
    string invite = 1 [(buf.validate.field).string.uuid = true]; // @gotags: query:"invite"
    string user_id = 2 [
      (buf.validate.field).string.uuid = true,
      (buf.validate.field).ignore_empty = true
    ]; // @gotags: query:"user_id"
  }

  message Response {
    string project_id = 1;
    string email = 2;
  }
}
// -----------------------------------------------------

// ListServerMembers
message ListServerMembers {
  message Request {
    int32 limit = 1;
    int32 offset = 2;
    string sort_by = 3;
    string owner_id = 4 [(buf.validate.field).string.uuid = true]; // @gotags: query:"owner_id"
    string project_id = 5 [(buf.validate.field).string.uuid = true]; // @gotags: query:"project_id"
    string server_id = 6 [(buf.validate.field).string.uuid = true]; // @gotags: query:"server_id"
  }

  message Response {
    int32 total = 1;
    repeated ServerMember.Response members = 2;
  }
}
// -----------------------------------------------------

// ServerMember
message ServerMember {
  message Request {
    string owner_id = 1 [(buf.validate.field).string.uuid = true]; // @gotags: query:"owner_id"
    string project_id = 2 [(buf.validate.field).string.uuid = true]; // @gotags: query:"project_id"
    string server_id = 3 [(buf.validate.field).string.uuid = true]; // @gotags: query:"server_id"
    string member_id = 4;
  }

  message Response {
    string member_id = 1;
    string user_id = 2;
    string user_login = 3;
    string user_name = 4;
    string user_surname = 5;
    string email = 6;
    user.Role role = 7;
    bool active = 8;
    bool online = 9;
    google.protobuf.Timestamp locked_at = 10;
    google.protobuf.Timestamp archived_at = 11;
    google.protobuf.Timestamp updated_at = 12;
    google.protobuf.Timestamp created_at = 13;
  }
}
// -----------------------------------------------------

// AddServerMember
message AddServerMember {
  message Request {
    string owner_id = 1 [(buf.validate.field).string.uuid = true];
    string project_id = 2 [(buf.validate.field).string.uuid = true];
    string server_id = 3 [(buf.validate.field).string.uuid = true];
    string member_id = 4;
    bool active = 5;
  }

  message Response {
    string member_id = 1;
  }
}
// -----------------------------------------------------

// UpdateServerMember
message UpdateServerMember {
  message Request {
    string owner_id = 1 [(buf.validate.field).string.uuid = true];
    string project_id = 2 [(buf.validate.field).string.uuid = true];
    string server_id = 3 [(buf.validate.field).string.uuid = true];
    string member_id = 4 [(buf.validate.field).string.uuid = true];
    oneof setting {
      bool active = 5;
      bool online = 6;
    }
  }

  message Response {}
}
// -----------------------------------------------------

// DeleteServerMember
message DeleteServerMember {
  message Request {
    string owner_id = 1 [(buf.validate.field).string.uuid = true]; // @gotags: query:"owner_id"
    string project_id = 2 [(buf.validate.field).string.uuid = true]; // @gotags: query:"project_id"
    string server_id = 3 [(buf.validate.field).string.uuid = true]; // @gotags: query:"server_id"
    string member_id = 4 [(buf.validate.field).string.uuid = true]; // @gotags: query:"member_id"
  }

  message Response {}
}
// -----------------------------------------------------

// rpc MembersWithoutServer
message MembersWithoutServer {
  message Request {
    int32 limit = 1;
    int32 offset = 2;
    string sort_by = 3;
    string owner_id = 4 [(buf.validate.field).string.uuid = true]; // @gotags: query:"owner_id"
    string project_id = 5 [(buf.validate.field).string.uuid = true]; // @gotags: query:"project_id"
    string server_id = 6 [(buf.validate.field).string.uuid = true]; // @gotags: query:"server_id"
    string login = 7;
  }
  message Response {
    int32 total = 1;
    repeated ServerMember.Response members = 2;
  }
}
// -----------------------------------------------------
